--- a/starter/02-HTML-Fundamentals/index.html
+++ b/starter/02-HTML-Fundamentals/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>The Basic Language of The Web: HTML</title>
+    <meta charset="UTF-8" />
   </head>
 
   <body>
@@ -18,12 +19,25 @@
 
     <h2>The Basic Language of the Web: HTML</h2>
 
+    <img
+      src="laura-jones.jpg"
+      alt="Headshot of Laura Jones"
+      width="50"
+      height="50"
+    />
+
     <p>
       Posted by
       <!--<b>Laura Jones</b>-->
       <strong>Laura Jones</strong> on Monday, June 21st 2027
     </p>
 
+    <img
+      src="post-img.jpg"
+      alt="HTML code on a screen"
+      width="500"
+      height="200"
+    />
     <p>
       All modern websites and web applications are built using three
       <!--<i>fundamental</i>-->
