Ch. 16 - Structuring Our Page

--- a/starter/02-HTML-Fundamentals/notes.html
+++ b/starter/02-HTML-Fundamentals/notes.html
@@ -8,51 +8,80 @@
   <body>
     <h1>HTML Fundametals</h1>
 
-    <h2>Ch. 11 - HTML Document Structure</h2>
+    <article>
+      <article>
+        <h2>Ch. 11 - HTML Document Structure</h2>
 
-    <h3>Non-optional Elements</h3>
-    <p>
-      Every HTML document must have a doctype, html, head, and body element.
-    </p>
+        <article>
+          <h3>Non-optional Elements</h3>
+          <p>
+            Every HTML document must have a doctype, html, head, and body
+            element.
+          </p>
+        </article>
 
-    <h3>doctype element</h3>
-    <p>
-      This tells the browser that the following should be processed with HTML5.
-    </p>
+        <article>
+          <h3>doctype element</h3>
+          <p>
+            This tells the browser that the following should be processed with
+            HTML5.
+          </p>
+        </article>
 
-    <h3>Head Element</h3>
-    <p>The head element is meant for things that don't appear on the page.</p>
+        <article>
+          <h3>Head Element</h3>
+          <p>
+            The head element is meant for things that don't appear on the page.
+          </p>
+        </article>
 
-    <h3>Body Element</h3>
-    <p>The body element is meant for things that appear on the page.</p>
+        <article>
+          <h3>Body Element</h3>
+          <p>The body element is meant for things that appear on the page.</p>
+        </article>
 
-    <h3>Indentation</h3>
-    <p>
-      It is standard to indent child elements for better readability, and has no
-      meaning to the browser.
-    </p>
+        <article>
+          <h3>Indentation</h3>
+          <p>
+            It is standard to indent child elements for better readability, and
+            has no meaning to the browser.
+          </p>
+        </article>
+      </article>
 
-    <h2>Ch. 12 - Text Elements</h2>
+      <article>
+        <header>
+          <h2>Ch. 12 - Text Elements</h2>
+        </header>
 
-    <h3>Headings</h3>
-    <p>There are 6 heading elements, h1 to h6</p>
-    <p>It is good practice for each page to have only one h1 element.</p>
+        <article>
+          <h3>Headings</h3>
+          <p>There are 6 heading elements, h1 to h6</p>
+          <p>It is good practice for each page to have only one h1 element.</p>
+        </article>
 
-    <h3>Bold Text</h3>
-    <p>There are two ways to bold text</p>
-    <p>
-      One way is to use the b element, but should be avoided, and rather use the
-      HTML5 strong element; the reason being that the b element provides no
-      semantic meaning, whilst strong means that this content is important and
-      must stand out on the page
-    </p>
+        <article>
+          <h3>Bold Text</h3>
+          <p>There are two ways to bold text</p>
+          <p>
+            One way is to use the b element, but should be avoided, and rather
+            use the HTML5 strong element; the reason being that the b element
+            provides no semantic meaning, whilst strong means that this content
+            is important and must stand out on the page
+          </p>
+        </article>
 
-    <h3>Italicized Text</h3>
-    <p>There are two ways to bold text</p>
-    <p>
-      One way is to use the i element, but should be avoided, and rather use the
-      HTML5 em element; the reason being that the i element provides no semantic
-      meaning, whilst em means that this content is emphasized
-    </p>
+        <article>
+          <h3>Italicized Text</h3>
+          <p>There are two ways to bold text</p>
+          <p>
+            One way is to use the i element, but should be avoided, and rather
+            use the HTML5 em element; the reason being that the i element
+            provides no semantic meaning, whilst em means that this content is
+            emphasized
+          </p>
+        </article>
+      </article>
+    </article>
   </body>
 </html>
