--- a/starter/03-CSS-Fundamentals/index.html
+++ b/starter/03-CSS-Fundamentals/index.html
@@ -3,6 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <title>The Basic Language of the Web: HTML</title>
+
+    <!-- 
+    internal css
+    <style>
+      h1 {
+        color: blue;
+      }
+    </style>
+     -->
+
+    <!-- external css -->
+    <link href="style.css" rel="stylesheet" />
   </head>
 
   <body>
@@ -16,8 +28,11 @@
     -->
 
     <header>
+      <!-- 
+        in-line css
+        <h1 style="color: blue">📘 The Code Magazine</h1>
+      -->
       <h1>📘 The Code Magazine</h1>
-
       <nav>
         <a href="blog.html">Blog</a>
         <a href="#">Challenges</a>
