Ch. 24 - Styling Text

--- a/starter/03-CSS-Fundamentals/notes.html
+++ b/starter/03-CSS-Fundamentals/notes.html
@@ -4,5 +4,16 @@
     <meta charset="UTF-8" />
     <title>CSS Fundamentals Notes</title>
   </head>
-  <body></body>
+  <body>
+    <article>
+      <h2>Ch 24. Styling Text</h2>
+      <p>Serif means those short, spike-like edges of text.</p>
+      <p>The style of an element affects the style of its child elements.</p>
+      <p>
+        The style 'text-align: center' positions the text at the center of
+        parent element.
+      </p>
+      <p>The default font-size is 16px.</p>
+    </article>
+  </body>
 </html>
