Ch. 25 - Combining Selectors

--- a/starter/03-CSS-Fundamentals/notes.html
+++ b/starter/03-CSS-Fundamentals/notes.html
@@ -15,5 +15,26 @@
       </p>
       <p>The default font-size is 16px.</p>
     </article>
+
+    <article>
+      <h2>Ch. 25 Combining Selectors</h2>
+      <p>
+        A list of selectors can be supplied for a CSS rule (known as a
+        'list-selector').
+      </p>
+      <p>
+        A string of selectors, separated by white-space, can be supplied for a
+        CSS rule (known as a 'descendent-selector').
+      </p>
+
+      <article>
+        <h3>Descendent-Selectors</h3>
+        <p>
+          Descendent-selectors are incredibly useful, but if it is written as to
+          reflect the HTML structure, it will lead to code that is harder to
+          maintain in the future.
+        </p>
+      </article>
+    </article>
   </body>
 </html>
