Ch. 26 - Class and ID Selectors

--- a/starter/03-CSS-Fundamentals/notes.html
+++ b/starter/03-CSS-Fundamentals/notes.html
@@ -36,5 +36,31 @@
         </p>
       </article>
     </article>
+
+    <article>
+      <h2>Ch. 26 Class and ID Selectors</h2>
+      <p>
+        By adding class and id attributes to elements, class and ID selectors
+        can be supplied for a CSS rule.
+      </p>
+      <p>An id attribute value may only be used once.</p>
+      <p>
+        It is a standard convention for classes and IDs comprising of multiple
+        words to be strung together by using dashes.
+      </p>
+      <p>
+        If multiple CSS rules apply to the same element, then technically they
+        all apply (more later).
+      </p>
+      <article>
+        <h3>Why use classes over IDs?</h3>
+        <p>
+          In the real world, using IDs often lead to more code refactoring, and
+          bugs when the project develops further. This is mitigated by using
+          classes over IDs, even if the CSS rule is only meant to be applied to
+          a single element.
+        </p>
+      </article>
+    </article>
   </body>
 </html>
