Ch. 27 - Working With Colors

--- a/starter/03-CSS-Fundamentals/notes.html
+++ b/starter/03-CSS-Fundamentals/notes.html
@@ -61,6 +61,36 @@
           a single element.
         </p>
       </article>
+
+      <article>
+        <h2>Ch. 27 Working with Colors</h2>
+        <p>
+          When multiple of the same style is applied to an element, the last one
+          is taken (more later).
+        </p>
+        <p>
+          It is an industry standard to represent a color using the hexidecimal
+          model, or rgba if transparency (alpha) is desired.
+        </p>
+        <p>
+          It is not reasonable to memorize or know many colors, instead, using a
+          color picker is standard.
+        </p>
+        <p>
+          VSCode has a built-in color picker that can be accessed by typing any
+          hexidecimal value (#fff, for example), and then clicking this
+          hexidecimal value.
+        </p>
+        <p>
+          VSCode's color picker provides different models for values, which can
+          be cycled through by clicking the value at the top of the color
+          picker.
+        </p>
+        <p>
+          A short-hand property is a special property that can be used to define
+          multiple properties in a single declaration.
+        </p>
+      </article>
     </article>
   </body>
 </html>
