--- a/starter/03-CSS-Fundamentals/index.html
+++ b/starter/03-CSS-Fundamentals/index.html
@@ -27,7 +27,7 @@
     <h6>The Basic Language of the Web: HTML</h6>
     -->
 
-    <header>
+    <header class="main-header">
       <!-- 
         in-line css
         <h1 style="color: blue">📘 The Code Magazine</h1>
