Ch. 29 - Styling Hyperlinks

--- a/starter/03-CSS-Fundamentals/notes.html
+++ b/starter/03-CSS-Fundamentals/notes.html
@@ -91,6 +91,23 @@
           multiple properties in a single declaration.
         </p>
       </article>
+
+      <article>
+        <h2>Ch. 29 Styling Links</h2>
+        <p>
+          It is not good practice to only use the element-selector for styling
+          links. Links have a few states, that can be selected in CSS by use of
+          specific pseudo-class selectors.
+        </p>
+        <p>Link pseudo-classes are always written in a specific order:</p>
+        <ul>
+          <li>:link</li>
+          <li>:visited</li>
+          <li>:hover</li>
+          <li>:active</li>
+        </ul>
+        <p>It may be useful to think of the acronym LVHA.</p>
+      </article>
     </article>
   </body>
 </html>
