Ch. 30 - Using Chrome Dev Tools

--- a/starter/03-CSS-Fundamentals/notes.html
+++ b/starter/03-CSS-Fundamentals/notes.html
@@ -108,6 +108,31 @@
         </ul>
         <p>It may be useful to think of the acronym LVHA.</p>
       </article>
+
+      <article>
+        <h2>Ch. 30 Using Chrome Dev Tools</h2>
+        <p>
+          Features within the Chrome Browser (and other browsers) that provide
+          additional tools to help developers.
+        </p>
+
+        <p>
+          Whilst inspecting an element, all of the CSS rules that were applied
+          to it are shown.
+        </p>
+
+        <p>Each CSS rule provides their source.</p>
+
+        <p>
+          The "User Agent Stylesheet" source is the default CSS for that element
+          selector.
+        </p>
+
+        <p>
+          The state of a link element can be 'forced' by ticking the
+          corresponding pseudo-class.
+        </p>
+      </article>
     </article>
   </body>
 </html>
