Ch. 31 - CSS Theory #1: Conflicts Between Selectors

--- a/starter/03-CSS-Fundamentals/notes/index.html
+++ b/starter/03-CSS-Fundamentals/notes/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>CSS Fundamentals Notes</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <article>
@@ -131,6 +132,20 @@
         <p>
           The state of a link element can be 'forced' by ticking the
           corresponding pseudo-class.
+        </p>
+      </article>
+
+      <article>
+        <h2>Ch. 31 CSS Theory #1: Conflicts Between Selectors</h2>
+        <img src="img/conflicting_selectors_and_declarations.png" />
+        <img src="img/resolving_conflicing_selectors.png" />
+        <p>
+          In VSCode, mousing over a CSS selector will show the "Selector
+          Specificity".
+        </p>
+        <p>
+          Selector Specificity indicates the priority of the selector, highest
+          to lowest priority read from left to right.
         </p>
       </article>
     </article>
