--- a/starter/03-CSS-Fundamentals/index.html
+++ b/starter/03-CSS-Fundamentals/index.html
@@ -160,7 +160,7 @@
     </aside>
 
     <footer>
-      <p id="copy" class="related-author">
+      <p id="copyright" class="copyright text">
         Copyright &copy; 2027 by The Code Magazine.
       </p>
     </footer>
