Ch. 32 - CSS Theroy #2: Inheritance and the Universal Selector

--- a/starter/03-CSS-Fundamentals/notes/index.html
+++ b/starter/03-CSS-Fundamentals/notes/index.html
@@ -148,6 +148,23 @@
           to lowest priority read from left to right.
         </p>
       </article>
+
+      <article>
+        <h2>Ch. 32 CSS Theory #2: Inheritance and the Universal Selector</h2>
+        <p>
+          An inherited property is very easily overwritten by any rule which has
+          a value for that same property.
+        </p>
+        <p>
+          Inheritance does not conflict with other selectors, rather,
+          inheritance works by applying styles to all child elements.
+        </p>
+        <img src="img/how_inheritance_works.png" />
+        <p>
+          By contrast, the universal selector applies to every element, and thus
+          can conflict with other selectors.
+        </p>
+      </article>
     </article>
   </body>
 </html>
