--- a/starter/03-CSS-Fundamentals/index.html
+++ b/starter/03-CSS-Fundamentals/index.html
@@ -34,6 +34,7 @@
       -->
       <h1>📘 The Code Magazine</h1>
       <nav>
+        <!-- <strong>this is a parapgraph</strong> -->
         <a href="blog.html">Blog</a>
         <a href="#">Challenges</a>
         <a href="#">Flexbox</a>
