Ch. 36 - Adding Dimensions

--- a/starter/03-CSS-Fundamentals/notes/index.html
+++ b/starter/03-CSS-Fundamentals/notes/index.html
@@ -233,6 +233,15 @@
           When two margins would occupy the same space, only the larger one of the two is effective.
         </p>
       </article>
+
+      <article class="chapter">
+        <h2 class="chapter-heading">Ch. 36 Adding Dimensions</h2>
+        <h3 class="chapter-sub-section-heading">New Properties:</h3>
+        <ul>
+          <li><code>width</code></li>
+          <li><code>height</code></li>
+        </ul>
+      </article>
     </article>
   </body>
 </html>
