--- a/starter/03-CSS-Fundamentals/notes/index.html
+++ b/starter/03-CSS-Fundamentals/notes/index.html
@@ -176,6 +176,11 @@
     </article>
 
     <article class="chapter">
+      <h2 class="chapter-heading">Ch. 33 Challenge #1</h2>
+      <a href="../challenge/1/">Challenge #1</a>
+    </article>
+
+    <article class="chapter">
       <h2 class="chapter-heading">Ch. 34 CSS Theory #3: The CSS Box Model</h2>
       <p class="chapter-sub-section">
         The box model defines how elements are displayed, and sized on a webpage.
@@ -254,7 +259,7 @@
         a container, then set that container's width to a constant value and set the 
         left and right margin to auto:
       </p>
-      
+
       <code>
 <pre>
 &lt;head&gt;
@@ -275,6 +280,11 @@
       <p>
         There is no specific element that semantically represents this container, so <code>&lt;div&gt;</code> is fine
       </p>
+    </article>
+
+    <article class="chapter">
+      <h2 class="chapter-heading">Ch. 38 Challenge #2</h2>
+      <a href="../challenge/2/">Challenge #2</a>
     </article>
   </body>
 </html>
