ch. 22 introduction to CSS

--- a/starter/03-CSS-Fundamentals/notes/index.html
+++ b/starter/03-CSS-Fundamentals/notes/index.html
@@ -7,6 +7,13 @@
   </head>
   <body>
     <div class="page-container">
+
+      <article class="chapter">
+        <h2 class="chapter-heading">Ch. 22 Introduction to CSS</h2>
+        <img src="img/ch22_what_is_css.png" alt="what is CSS?" class="lecture-slide">
+        <img src="img/ch22_how_we_select_and_style_elements.png" alt="how we select and style elements" class="lecture-slide">
+      </article>
+
       <article class="chapter">
         <h2 class="chapter-heading">Ch 24. Styling Text</h2>
         <p>Serif means those short, spike-like edges of text.</p>
