--- a/starter/03-CSS-Fundamentals/notes/index.html
+++ b/starter/03-CSS-Fundamentals/notes/index.html
@@ -238,6 +238,9 @@ color: blue;
   
       <article class="chapter">
         <h2 class="chapter-heading">Ch. 27 Working with Colors</h2>
+        <img src="img/ch26_the_rgb_model.png" alt="The RGB Model" class="lecture-slide">
+        <img src="img/ch26_defining_colors_in_css.png" alt="Defining Colors in CSS" class="lecture-slide">
+        <img src="img/ch26_shades_of_grey.png" alt="Shades of Grey" class="lecture-slide">
         <p>
           When multiple of the same style is applied to an element, the last one
           is taken (more later).
@@ -264,6 +267,25 @@ color: blue;
           A short-hand property is a special property that can be used to define
           multiple properties in a single declaration.
         </p>
+        <article class="chapter-sub-section">
+          <h3 class="chapter-sub-section-heading">New Properties</h3>
+          <ul>
+            <li><code>border</code></li>
+            <li><code>border-color</code></li>
+            <li><code>border-style</code></li>
+            <li><code>border-width</code></li>
+            <li><code>border-top</code></li>
+            <li><code>border-top-color</code></li>
+            <li><code>border-top-style</code></li>
+            <li><code>border-top-width</code></li>
+            <li><code>border-right</code></li>
+            <li>...</li>
+            <li><code>border-bottom</code></li>
+            <li>...</li>
+            <li><code>border-left</code></li>
+            <li>...</li>
+          </ul>
+        </article>
       </article>
   
       <article class="chapter">
