ch. 28 pseudo-classes

--- a/starter/03-CSS-Fundamentals/notes/index.html
+++ b/starter/03-CSS-Fundamentals/notes/index.html
@@ -287,6 +287,24 @@ color: blue;
           </ul>
         </article>
       </article>
+
+      <article class="chapter">
+        <h2 class="chapter-heading">Ch. 28 Pseudo-Classes</h2>
+        <div class="chapter-sub-section">
+          <p>Pseudo-classes begin with a colon.</p>
+          <p>Pseudo-classes are useful for selecting elements that match a more complex pattern.</p>
+        </div>
+        <article class="chapter-sub-section">
+          <h3 class="chapter-sub-section-heading">A Selection of Pseudo-classes</h4>
+          <ul>
+            <li><code>li:first-child</code></li>
+            <li><code>li:last-child</code></li>
+            <li><code>li:nth-child(2)</code></li>
+            <li><code>li:nth-child(odd)</code></li>
+            <li><code>li:first-of-type</code></li>
+          </ul>
+        </article>
+      </article>
   
       <article class="chapter">
         <h2 class="chapter-heading">Ch. 29 Styling Links</h2>
