ch. 31 css theory #1: conflicts between selectors

--- a/starter/03-CSS-Fundamentals/notes/index.html
+++ b/starter/03-CSS-Fundamentals/notes/index.html
@@ -364,6 +364,10 @@ color: blue;
         <img class="lecture-slide" src="img/resolving_conflicing_selectors.png" />
         <section class="chapter-sub-section">
           <p>
+            If the hierarchy alone cannot resolve a conflict, then the last read conflicting 
+            declaration is applied.
+          </p>
+          <p>
             In VSCode, mousing over a CSS selector will show the "Selector
             Specificity".
           </p>
