--- a/starter/06-Components/01-accordion.html
+++ b/starter/06-Components/01-accordion.html
@@ -40,15 +40,31 @@
 		.accordion {
 			width: 700px;
 			margin: 100px auto;
+			display: flex;
+			flex-direction: column;
+			gap: 24px;
 		}
 
-		.item {}
+		.item {
+			box-shadow: 0 0 32px rgb(0, 0, 0, 0.1);
+			padding: 24px;
+
+			display: grid;
+			grid-template-columns: auto 1fr auto;
+			column-gap: 24px;
+			row-gap: 32px;
+			align-items: center;
+		}
 
 		.number,
 		.text {
 			font-size: 24px;
 			font-weight: 500;
-			color: #087f5b;
+			/* color: #087f5b; */
+		}
+
+		.number {
+			color: #ced4da;
 		}
 
 		.icon {
@@ -59,7 +75,10 @@
 
 		.text {}
 
-		.hidden-box {}
+		.hidden-box {
+			grid-column: 2;
+			display: none;
+		}
 
 		.hidden-box p {
 			line-height: 1.6;
@@ -74,14 +93,81 @@
 			flex-direction: column;
 			gap: 12px;
 		}
+
+		.open {
+			border-top: 4px solid #087f5b;
+		}
+
+		.open .hidden-box {
+			display: block;
+		}
+
+		.open .number,
+		.open .text {
+			color: #087f5b;
+		}
 	</style>
 </head>
 
 <body>
 	<div class="accordion">
 		<div class="item">
+			<p class="number">01</p>
+			<p class="text">Where are these chairs assembled?</p>
+			<svg class="icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+				stroke="currentColor" class="w-6 h-6">
+				<path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
+			</svg>
+
+			<div class="hidden-box">
+				<p>
+					Lorem ipsum dolor sit, amet consectetur adipisicing elit. Alias
+					magni sed cumque, corporis earum facilis rem aspernatur dignissimos
+					et reiciendis deleniti nesciunt omnis voluptates at commodi eveniet
+					maiores aut id.
+				</p>
+				<ul>
+					<li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+					<li>
+						Fugiat libero aperiam minus necessitatibus assumenda pariatur.
+					</li>
+					<li>
+						Soluta distinctio cumque provident eos autem, temporibus ipsum.
+					</li>
+					<li>Rerum eveniet molestias laborum officia tenetur beatae.</li>
+				</ul>
+			</div>
+		</div>
+		<div class="item open">
 			<p class="number">02</p>
 			<p class="text">How long do I hace to return my chair</p>
+			<svg class="icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+				stroke="currentColor" class="w-6 h-6">
+				<path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
+			</svg>
+
+			<div class="hidden-box">
+				<p>
+					Lorem ipsum dolor sit, amet consectetur adipisicing elit. Alias
+					magni sed cumque, corporis earum facilis rem aspernatur dignissimos
+					et reiciendis deleniti nesciunt omnis voluptates at commodi eveniet
+					maiores aut id.
+				</p>
+				<ul>
+					<li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+					<li>
+						Fugiat libero aperiam minus necessitatibus assumenda pariatur.
+					</li>
+					<li>
+						Soluta distinctio cumque provident eos autem, temporibus ipsum.
+					</li>
+					<li>Rerum eveniet molestias laborum officia tenetur beatae.</li>
+				</ul>
+			</div>
+		</div>
+		<div class="item">
+			<p class="number">03</p>
+			<p class="text">Do you ship to countries outside the EU?</p>
 			<svg class="icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
 				stroke="currentColor" class="w-6 h-6">
 				<path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
